Fix visible result

--- a/src/App.less
+++ b/src/App.less
@@ -81,7 +81,7 @@ ul {
   padding: 3px 11px;
 }
 .ant-btn {
-  padding: 4px 15px;
+  padding: 4px 4px;
 }
 .mobileHidden {
   display: flex;
